add dir's structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="content">
-    <p>Ну здрасти</p>
+    <p id="test">Ну здрасти!</p>
 </div>
 <script src="main.bundle.js"></script>
 </body>
