edit webpack cfg: add minicss, html[lugin, pugplugin, etc

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 <div class="content">
-    <p id="test">Ну здрасти!</p>
+    <p id="test">Ну здрасти, леса колбаса</p>
 </div>
-<script src="main.bundle.js"></script>
 </body>
 </html>
